@@ -70,8 +70,8 @@ public abstract class DataOutput {
   }
 
   /** Writes an int in a variable-length format.  Writes between one and
-   * five bytes.  Smaller values take fewer bytes.  Negative numbers are not
-   * supported.
+   * five bytes.  Smaller values take fewer bytes.  Negative numbers are
+   * supported, but should be avoided.
    * @see DataInput#readVInt()
    */
   public final void writeVInt(int i) throws IOException {
@@ -96,6 +96,7 @@ public abstract class DataOutput {
    * @see DataInput#readVLong()
    */
   public final void writeVLong(long i) throws IOException {
+    assert i >= 0L;
     while ((i & ~0x7F) != 0) {
       writeByte((byte)((i & 0x7f) | 0x80));
       i >>>= 7;
